--- a/bio.html
+++ b/bio.html
@@ -7,13 +7,14 @@
 </head>
 <body>
 	<nav><ul>
+		<div id="n">
 	<li><a href="index.html">Головна</a></li>
-		<li><a href="bio.html">Біографія</a></li>
+		<li><a href="bio.html">Біографія</a></li></div>
 			</ul><li id="u"><font size="6" style="color:white;">Cherkasy State Technological University</font></li></nav>
 	<content>
 		
 <p><font size="5" style="color: white;">
-	Мене звати Абросімов Олексій Олегович,народився 3 червня 2003р. у місті Черкаси,Черкаської області,Україна.<br>
+Мене звати Абросімов Олексій Олегович,народився 3 червня 2003р. у місті Черкаси,Черкаської області,Україна.<br>
 Живу в Черкасах до сьогоднішнього дня.<br>
 Закінчив Черкаську спеціалізовану школу I-III ступенів №17 у 2021 році.<br>
 На даний момент навчаюсь в Черкаському Державному Технологічному Університеті на спеціальності кібербезпека на другому курсі навчання.
